Reset createInteralUrl method